--- a/views/users/login.handlebars
+++ b/views/users/login.handlebars
@@ -10,7 +10,7 @@
                     required>
                 </div>
                 <div class="form-group">
-                    <label for="password">Email</label>
+                    <label for="password">Password</label>
                     <input type="password" class="form-control" name="password"
                     required>
                 </div>
